--- a/dashboard/Test.html
+++ b/dashboard/Test.html
@@ -376,7 +376,7 @@
                 <!-- Dish 4 -->
                 <div class="dish-card">
                     <div class="dish-image">
-                        <img src="https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?w=300&h=200&fit=crop" alt="Lẩu Gà Lá Giang">
+                        <img src="/images/lgbt.png" alt="Lẩu Gà Lá Giang">
                     </div>
                     <div class="dish-content">
                         <h3 class="dish-name">Lẩu Gà Lá Giang</h3>
