--- a/dashboard/favorites.html
+++ b/dashboard/favorites.html
@@ -263,7 +263,7 @@
                 <!-- Menu Item 1 -->
                 <div class="menu-item">
                     <div class="menu-image">
-                        <img src="https://images.unsplash.com/photo-1569718212165-3a8278d5f624?w=200&h=160&fit=crop" alt="Cá Kho Làng Vũ Đại">
+                        <img src="/images/cakho.png" alt="Cá Kho Làng Vũ Đại">
                     </div>
                     <div class="menu-content">
                         <h3 class="menu-name">Cá Kho Làng Vũ Đại</h3>
@@ -299,11 +299,11 @@
                 <!-- Menu Item 4 -->
                 <div class="menu-item">
                     <div class="menu-image">
-                        <img src="https://images.unsplash.com/photo-1582878826629-29b7ad1cdc43?w=200&h=160&fit=crop" alt="Thịt Heo Tốc">
+                        <img src="/images/thitheo.png" alt="Thịt Heo Tốc">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-name">Thịt Heo Tốc (Đặt Trước)</h3>
-                        <p class="menu-description">Món thịt heo tốc, hay còn gọi là thịt heo rừng, là một trong những món ăn truyền thống...</p>
+                        <h3 class="menu-name">Thịt Heo Rừng (Đặt Trước)</h3>
+                        <p class="menu-description">Món thịt heo rừng, là một trong những món ăn truyền thống...</p>
                     </div>
                     <div class="menu-price">250.000 đ</div>
                 </div>
@@ -323,7 +323,7 @@
                 <!-- Menu Item 6 -->
                 <div class="menu-item">
                     <div class="menu-image">
-                        <img src="https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?w=200&h=160&fit=crop" alt="Sườn Xào Chua Ngọt">
+                        <img src="/images/suon.png" alt="Sườn Xào Chua Ngọt">
                     </div>
                     <div class="menu-content">
                         <h3 class="menu-name">Sườn Xào Chua Ngọt</h3>
@@ -347,11 +347,11 @@
                 <!-- Menu Item 8 -->
                 <div class="menu-item">
                     <div class="menu-image">
-                        <img src="https://images.unsplash.com/photo-1565958011703-44f9829ba187?w=200&h=160&fit=crop" alt="Tái Heo Mầm Nhi">
+                        <img src="/images/taiheo.png" alt="Tái Heo Mầm Nhi">
                     </div>
                     <div class="menu-content">
-                        <h3 class="menu-name">Tái Heo Mầm Nhi</h3>
-                        <p class="menu-description">Món Tái Heo Mầm Nhi là một món ăn truyền thống của Việt Nam, được biết đến với hương...</p>
+                        <h3 class="menu-name">Tai Heo Mắm Nhĩ</h3>
+                        <p class="menu-description">Tai Heo Mắm Nhĩ là một món ăn truyền thống của Việt Nam, được biết đến với hương...</p>
                     </div>
                     <div class="menu-price">89.000 đ</div>
                 </div>
