--- a/order/datbanngay.html
+++ b/order/datbanngay.html
@@ -276,7 +276,7 @@
                       />
                       <label for="dish4" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/comtamsuonnuong.jpg"
                           alt="Cơm tấm sườn nướng"
                         />
                         <div class="dish-info">
@@ -306,7 +306,7 @@
                       />
                       <label for="dish5" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/comganuong.jpg"
                           alt="Cơm gà nướng"
                         />
                         <div class="dish-info">
@@ -336,7 +336,7 @@
                       />
                       <label for="dish6" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/comboluclac.jpg"
                           alt="Cơm bò lúc lắc"
                         />
                         <div class="dish-info">
@@ -366,7 +366,7 @@
                       />
                       <label for="dish7" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/miquang.png"
                           alt="Mì Quảng"
                         />
                         <div class="dish-info">
@@ -399,7 +399,7 @@
                       />
                       <label for="dish8" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/lauthai.jpg"
                           alt="Lẩu Thái"
                         />
                         <div class="dish-info">
@@ -429,7 +429,7 @@
                       />
                       <label for="dish9" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/lauca.jpg"
                           alt="Lẩu cá"
                         />
                         <div class="dish-info">
@@ -459,7 +459,7 @@
                       />
                       <label for="dish10" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/canhchuaca.jpg"
                           alt="Canh chua cá"
                         />
                         <div class="dish-info">
@@ -492,7 +492,7 @@
                       />
                       <label for="dish11" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/nemnuong.jpg"
                           alt="Nem nướng"
                         />
                         <div class="dish-info">
@@ -522,7 +522,7 @@
                       />
                       <label for="dish12" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/goicuon.jpg"
                           alt="Gỏi cuốn"
                         />
                         <div class="dish-info">
@@ -552,7 +552,7 @@
                       />
                       <label for="dish13" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/châc.jpg"
                           alt="Chả cá"
                         />
                         <div class="dish-info">
@@ -585,7 +585,7 @@
                       />
                       <label for="dish14" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/trada.png"
                           alt="Trà đá"
                         />
                         <div class="dish-info">
@@ -615,7 +615,7 @@
                       />
                       <label for="dish15" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/nuocdua.jpg"
                           alt="Nước dừa"
                         />
                         <div class="dish-info">
@@ -645,7 +645,7 @@
                       />
                       <label for="dish16" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/bia.jpg"
                           alt="Bia"
                         />
                         <div class="dish-info">
@@ -675,7 +675,7 @@
                       />
                       <label for="dish17" class="dish-label">
                         <img
-                          src="/placeholder.svg?height=80&width=80"
+                          src="../images/nuoccam.jpg"
                           alt="Nước cam"
                         />
                         <div class="dish-info">
@@ -772,6 +772,6 @@
       </a>
     </div>
 
-    <script src="./assets/js/datbanngay.js"></script>
+    <script src="../js/datbanngay.js"></script>
   </body>
 </html>
